# SkillForge

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md  package.json  pnpm-lock.yaml
.codex/tasks/: i18n-theme.md
docs/superpowers/plans/: 2026-05-09-mvp-completion.md
docs/superpowers/specs/: 2026-05-09-mvp-completion-design.md  2026-05-09-readme-design.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/editor/: SkillEditor.tsx
src/components/explorer/: SkillExplorer.tsx
src/components/importExport/: ImportExportPanel.tsx
src/components/layout/: WorkspaceShell.tsx
src/components/metadata/: MetadataPanel.tsx
src/components/runtime/: RuntimePanel.tsx
src/components/validator/: ValidationPanel.tsx
src/lib/: i18n.test.ts  i18n.ts  runtime.test.ts  runtime.ts  sampleSkill.ts  skill.test.ts  skill.ts  tauriCommands.ts  theme.test.ts  theme.ts  validation.test.ts  validation.ts  workspaceAdapter.test.ts  workspaceAdapter.ts  workspaceStore.test.ts  workspaceStore.ts
