[package]
name = "skillforge"
version = "0.1.0"
description = "Agent Skill visual development IDE"
authors = ["wwj"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "skillforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
walkdir = "2"
zip = "6"
